#316: Fixed z-index css issues causing some items to appear above the app container header.

--- a/app/assets/components/bl-badge/bl-badge.css
+++ b/app/assets/components/bl-badge/bl-badge.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     font-family: 'Lato', 'Open Sans', Verdana, Arial !important;
+    z-index: 0;
   }
 
 /* === BADGE STYLES === */
