--- a/app/assets/components/bl-query-options/bl-query-options.css
+++ b/app/assets/components/bl-query-options/bl-query-options.css
@@ -1,4 +1,4 @@
 :host { 
   display: flex; 
-  z-index: 90;
+  z-index: 0;
 }
