--- a/app/assets/components/bl-user/bl-user.css
+++ b/app/assets/components/bl-user/bl-user.css
@@ -14,6 +14,7 @@
     flex: 1 1 auto;
     background-color: var(--background-color, #F5F5F5);
     border-radius: 5px;
+    z-index: 0;
   }
     .wrapper {
       display: flex;
